muster/deployment/production/namespace/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    created-by: gradlon
    managedb-by: gradlon
    owner: kulturverein-walzwerk
  name: kulturverein-walzwerk
